# flask-sorteio

./: pyproject.toml
flask_sorteio/: README.md  __init__.py
flask_sorteio/blueprints/: home.py
flask_sorteio/templates/: base.html  cotas.html  index.html
